Desktop design done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="PabloFC" />
 
     <link
       rel="icon"
@@ -20,7 +21,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor</title>
   </head>
   <body>
     <main>
